...
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_of_the_song"
            android:textSize="20sp"
            android:maxLines="1"
...
