...
    <string name="alert_dialog_msg_error_parsing">Error parsing XML to import: xml was null/empty</string>
    <string name="import_successful">MusicXML(s) where imported successfully</string>
    <string name="import_unsuccessful">MusicXML(s) where not imported successfully</string>
    <string name="delete_successful"> was deleted successfully</string>
    <string name="delete_title">Delete sheet </string>
    <string name="delete_sheet_quest">Are you sure you want to delete this sheet?</string>
    <string name="log_in">Log In</string>
    <string name="log_out_question">Are you sure you want to log out?</string>
    <string name="log_in_successfull">Log in successful</string>
    <string name="error_user_doesnt_exist">User does not exist</string>
    <string name="error_folder_name_exists_already">Folder name already exists, pick a different folder name</string>
    <string name="home">Home</string>
    <string name="import_">Import</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="search_hint">Search by title or author…</string>
    <string name="no_import">No import</string>
    <string name="no_sheets_have_been_imported_yet">No sheets have been imported yet, import some with the button at the bottom right corner. </string>
    <string name="no_folders_have_been_created_yet">No folders have been created yet, create some with the button at the bottom right corner.</string>
    <string name="no_folders_no_import">Cannot Import, no folders exist or no sheets have been selected yet</string>
    <string name="new_folder">New folder</string>
...
    <string name="sheet_name_taken_err">Sheet name already in use</string>
    <string name="folder_name_taken_err">Folder name already in use</string>
    <string name="rename_nick_empty_err">New nickname cannot be empty</string>
    <string name="error_generic">Unexpected renaming error</string>
    <string name="rename_nick_length_err">New nickname cannot be more than 20 chars long</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_btn">Delete sheet</string>
    <string name="delete_confirm"> Folder was deleted</string>
    <string name="upload">Upload</string>
    <string name="rename_btn">change nickname</string>
    <string name="folder">folder</string>
    <string name="folder_color">folder color</string>
    <string name="melodies">MELODIES</string>
    <string name="avatar">avatar</string>
    <string name="_01234567890123456789">01234567890123456789</string>
    <string name="search">Search</string>
    <string name="folder_title">Folder Title</string>
    <string name="basic_sheets">Basic Sheets</string>
    <string name="title_of_the_song">TITLE OF THE SONG</string>
    <string name="author_placeholder">AUTHOR</string>
    <string name="aaaa">aaaa</string>
    <string name="login_wrong_length_err">Nickname must be less than 20 chars in length</string>
    <string name="login_wrong_blank_err">Nickname cannot be blank</string>
    <string name="log_in_title">Log In</string>
    <string name="register_title">Register</string>
    <string name="nickname_input">Nickname</string>
    <string name="nickname_rename">Change Nickname</string>
    <string name="nickname_new_name">Changing my nickname </string>
    <string name="nickname_new_name2">to something new: </string>
    <string name="nickname_unable">Unable to register with given nickname</string>
    <string name="nickname_title">Nickname</string>
    <string name="nickname_hint">Enter new nickname…</string>
...
