<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Profile">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfileAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="12dp"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp">
        <ImageView
            android:id="@+id/ivProfileAvatar"
            android:layout_height="80dp"
            android:background="@color/md_theme_secondary"
            android:layout_width="match_parent"
            android:contentDescription="@string/avatar"
            android:src="@drawable/account">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUserId"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardProfileAvatar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="45dp"
            android:text="@string/nickname_title"
            android:maxWidth="100dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="47dp"
            android:text="@string/_01234567890123456789"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="350dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:adjustViewBounds="true"
            android:background="@drawable/round_border"
            android:contentDescription="@string/rename_btn"
            android:scaleType="fitCenter"
            android:src="@drawable/edit" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHistoryEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/cardUserId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogOut"
        app:cardElevation="6dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvHistoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_sheets_played"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <!-- RecyclerView para mostrar las 5 entradas -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHistoryEntries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/recycler_history_entry_item" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>